--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            clickmap:true,
            trackLinks:true,
            accurateTrackBounce:true,
-           webvisor:true
+           webvisor:false
       });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/98131758" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
