fix: off some settings

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
       ym(98131758, "init", {
            clickmap:true,
-           trackLinks:true,
-           accurateTrackBounce:true,
-           webvisor:false
+          //  trackLinks:true,
+          //  accurateTrackBounce:true,
+          //  webvisor:false
       });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/98131758" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
